bear-blog/async/objects/AsyncJob__e/AsyncJob__e.object-meta.xml
<CustomObject>
    <description>Used to process async jobs that could not be executed as required in the original context due to the limits</description>
    <label>Async Job</label>
    <pluralLabel>Async Jobs</pluralLabel>
</CustomObject>