bear-blog/async/objects/AsyncJob__e/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>How many records should pre processed at once in Batch or Queueable execution</description>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>