bear-blog/async/objects/AsyncJob__e/fields/HandlerTypeName__c.field-meta.xml
<CustomField>
    <fullName>HandlerTypeName__c</fullName>
    <description
	>Name of the handling Class to use to process records. Must contain the full qualified name of the class including any Outer Classes or namespaces. Class must provide a default constructor.</description>
    <label>Handler Class Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>