bear-blog/async/objects/AsyncJob__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Serialised List of records to process</description>
    <label>Serialised Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>